# asterisk-rs

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  book.toml  rustfmt.toml  typos.toml
.github/workflows/: audit.yml  book.yml  ci.yaml  rust.yml  test.yml
agirs/: Cargo.toml
arirs/: Cargo.toml
arirs/examples/: dtmf.rs  list-channels.rs  originate.rs  playback.rs
arirs/src/: asterisk.rs  authorization.rs  bridge.rs  channel.rs  client.rs  device.rs  error.rs  event.rs  lib.rs  playback.rs  recording.rs  rtp_statistics.rs  variable.rs
arirs/src/ari_client/: mod.rs
arirs/src/ari_client/channel/: responses.rs
arirs/src/ari_client/recording/: core.rs  responses.rs
arirs/src/channel/: request_params.rs  responses.rs
arirs/src/request_client/: core.rs  mod.rs
arirs/src/request_client/bridge/: core.rs
arirs/src/request_client/channel/: core.rs  request_params.rs
arirs/src/request_client/playback/: core.rs
arirs/src/request_client/recording/: core.rs
crates/agi/: Cargo.toml
crates/agirs/: Cargo.toml
crates/ami/: Cargo.toml
crates/amirs/: Cargo.toml
crates/ari/: Cargo.toml
crates/ari/examples/: dtmf.rs  list-channels.rs  originate.rs  playback.rs
crates/ari/src/: asterisk.rs  authorization.rs  event.rs  lib.rs
crates/ari/src/ari_client/: core.rs
crates/ari/src/ari_client/bridge/: core.rs  mod.rs
crates/ari/src/ari_client/channel/: core.rs  request_params.rs  responses.rs
crates/ari/src/ari_client/playback/: core.rs  mod.rs  request_params.rs  responses.rs
crates/arirs/: Cargo.toml
crates/arirs/examples/: originate.rs
crates/arirs/src/ari_client/: core.rs
crates/arirs/src/ari_client/bridge/: responses.rs
docs/: SUMMARY.md
examples/: ari-explorer.rs  channels.rs  dtmf.rs  event-listener.rs  list-channels.rs  originate.rs  playback.rs
src/: bridge.rs  channel.rs  client.rs  device.rs  lib.rs  playback.rs  recording.rs  rtp_stat.rs
