[package]
name = "ari-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
futures-util = "0.3.30"
http-body-util = "0.1.1"
httparse = "1.8.0"
hyper = { version = "1.3.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tracing = { version = "0.1.40", features = ["attributes"] }
tungstenite = "0.21.0"
url = "2.5.0"

[dev-dependencies]
futures-channel = "0.3.30"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.37.0", features = ["full"] }
