[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
readme = "README.md"
version = "0.1.0"

[workspace.lints.rust]
# TEMP:
# missing_docs = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
self_named_module_files = "deny"

[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html#avoid-linking-debug-info
debug = 0
strip = "debuginfo"

[workspace.dependencies]
