[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
readme = "README.md"
version = "0.1.0"

[workspace.lints.rust]
# TEMP:
# missing_docs = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
self_named_module_files = "deny"

[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html#avoid-linking-debug-info
debug = 0
strip = "debuginfo"

[workspace.dependencies]
chrono = "0.4"
derive-getters = "0.5"
futures-channel = "0.3"
futures-util = "0.3"
rand = "0.8"
reqwest = "0.12"
serde = "1.0"
serde_json = "1.0"
serde_qs = "0.13"
strum = "0.26"
thiserror = "1.0"
tokio = "1.40"
tokio-tungstenite = "0.23"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
