[package]
edition = "2021"
name = "arirs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
futures-channel = "0.3.30"
futures-util = "0.3.30"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.121"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.23.1"
tracing = { version = "0.1.40", features = ["attributes"] }
url = "2.5.2"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
