[package]
name = "arirs"

edition.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive-getters = "0.5"
futures-channel = "0.3"
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.13"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt"] }
tokio-tungstenite = { version = "0.23", features = ["url"] }
url = "2.5"

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
