[package]
name = "arirs"

edition.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
derive-getters.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_qs.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-tungstenite = { workspace = true, features = ["url"] }
url.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
